# Holger-CS-Learn

./: .gitignore  README.md
Algorithm/: README.md
Analog-Digital-Circuit-Design/: README.md
Analog-Digital-Circuit-Design/Lab.2020/: Lab01.doc  Lab02.doc  Lab03.doc  Lab04.doc  Lab05.doc  Lab06.doc
Artificial-Intelligence/: README.md
C-Plus-Plus/: README.md
C-Plus-Plus/Lab.2020/Assignment1_kNN/: CMakeLists.txt  CMakeSettings.json  README.md
C-Plus-Plus/Lab.2020/Assignment1_kNN/data/: iris.data
C-Plus-Plus/Lab.2020/Assignment1_kNN/src/evaluate/: eval_main.cpp  eval_runner.cpp  eval_runner.h
C-Plus-Plus/Lab.2020/Assignment1_kNN/src/predict/: pred_main.cpp  pred_runner.cpp  pred_runner.h
C-Plus-Plus/Lab.2020/Assignment1_kNN/src/shared/: kNNHelper.cpp  kNNHelper.h
Compile-Principle/: README.md
Compile-Principle/Lab.2021/Ex0102/src/: CMakeLists.txt  lexer.h  minimize.cpp  myt.cpp  subset.cpp  tools.h
Compile-Principle/Lab.2021/Ex0102/src/lexer/: dfa.cpp  dfa.h  dfa_helper.hpp  fa.cpp  fa.h  nfa.cpp  nfa.h  properties.h  regex.cpp  regex.h
Compile-Principle/Lab.2021/Ex0102/src/tools/: command_line.cpp  command_line.h  file_handler.cpp  file_handler.h
Computer-Network/: README.md
Computer-Organization/: README.md
DB/: README.md
DB/Slides/: 0Ch02Rel.ppt  (+9 more)
Data-Structure/: README.md
Information-Retrieval/: README.md
Java/: README.md
Operating-System/: README.md
Operating-System/Lab.2022/实验2/: CMakeLists.txt  readme.md
Operating-System/Lab.2022/实验2/fork/: Makefile  process-exec.c  process-fork.c
Operating-System/Lab.2022/实验2/schedule/: Makefile  example-fcfs.txt  example-pr.txt  example-rr.txt  example-sjf_srtf.txt  schedule_fcfs.c  schedule_pr.c  schedule_proc.c  schedule_proc.h  schedule_rr.c  schedule_sjf.c  schedule_srtf.c
Python/: README.md
(+1187 files in other folders)
